# indico-plugin-unipievents

./: LICENSE  MANIFEST.in  README.md  docker-compose.yml  indico.env.sample  setup.cfg
db-init/: 0001-init.sql
indico_unipievents/: __init__.py  plugin.py  views.py  wordpress.py
indico_wp/: controllers.py  forms.py  plugin.py  views.py  wordpress.py
indico_wp/static/: main.js
indico_wp/templates/: sync.html
