[metadata]
name = indico-plugin-wp
version = 3.1
description = Wordpress plugin for Indico
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/robol/indico-plugin-wp
license = MIT
author = Leonardo Robol
author_email = leonardo.robol@unipi.it
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.9.0
install_requires =
    indico>=3.1

[options.entry_points]
indico.plugins =
    wp = indico_wp.plugin:IndicoWp

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213